--- a/README_Ja.textile
+++ b/README_Ja.textile
@@ -3,7 +3,8 @@ h1. Closure のためのエクステンション用 Favicon モジュール
 h2. 概要
 
 このモジュールはChrome extension、Firefox Greasemonkey などに適応して動作する Favicon モジュールです。
-Chrome extension の場合は、 @manifest.json@ の @permissions@" に @"chrome://favicon/"@ を追加してください。
+Chrome extension の場合は、 @manifest.json@ の @"permissions"@ に @"chrome://favicon/"@ を追加してください。
+詳細は "公式リファレンス":http://code.google.com/chrome/extensions/manifest.html#permissions を参照してください。
 
 
 h2. API リファレンス
